# Cplusplus-template

./: .gitignore  CMakeLists.txt  README.md  fetch_data.ipynb  main.cpp  vcpkg-configuration.json
data/: portfolio.json  sample_stock_data.csv  test_portfolio.json
include/: data_processor.hpp
src/: data_processor.cpp  main.cpp
src/calculations/: eval.cpp  eval.hpp  format.cpp  format.hpp  lookup.cpp  lookup.hpp  projection.cpp  projection.hpp  rebalance.cpp  rebalance.hpp  speculation.cpp  speculation.hpp  strategies.cpp  strategies.hpp
src/common/: types.cpp  types.hpp
src/data_processing/: csv_parser.cpp  csv_parser.hpp  json_parser.cpp  json_parser.hpp  portfolio_generator.cpp  portfolio_generator.hpp  stock_processor.cpp  stock_processor.hpp
src/prediction/: predictor.cpp  predictor.hpp
tests/: CMakeLists.txt  test_data_processor.cpp  test_predictor.cpp
